--- a/homework/homework2/exercise6.css
+++ b/homework/homework2/exercise6.css
@@ -3,7 +3,7 @@
 #id {
 
     float: left;
-    background: tan;
+    background-color: tan;
     font-family: Verdana, sans-serif;
     font-size: large;
     padding: 20px;
