--- a/project/template/default.html
+++ b/project/template/default.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <title></title>
+
+        <link rel="stylesheet" href="/dependencies/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/dependencies/css/style.css">
     </head>
     <body>
+
         {{ content }}
 
-
-
+        <script src="/dependencies/js/bootstrap.min.js" defer></script>
     </body>
 </html>
