--- a/project/template/default.html
+++ b/project/template/default.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="/dependencies/css/style.css">
     </head>
     <body>
+        {{ nav.html }}
 
         {{ content }}
 
