--- a/project/template/default.html
+++ b/project/template/default.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="flex min-h-full">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title></title>
 
-        <link rel="stylesheet" href="/dependencies/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/dependencies/css/style.css">
+        <link rel="stylesheet" href="dependencies/css/tailwind.css">
+        <link rel="stylesheet" href="dependencies/css/style.css">
     </head>
-    <body>
+    <body class="min-h-full w-full overflow-auto">
         {{ nav.html }}
 
         {{ content }}
-
-        <script src="/dependencies/js/bootstrap.min.js" defer></script>
     </body>
 </html>
