switch to liquid

--- a/project/template/default.html
+++ b/project/template/default.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="dependencies/css/style.css">
     </head>
     <body class="min-h-full w-full overflow-auto">
-        {{ nav.html }}
+        {% render 'nav.liquid' %}
 
         {{ content }}
     </body>
