--- a/project/src/dependencies/css/style.css
+++ b/project/src/dependencies/css/style.css
@@ -1,6 +1,11 @@
 @charset "utf-8";
 
-@import url("https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap");
+@font-face {
+
+    font-family: "Lexend Deca";
+    src: url("../fonts/lexend-deca.woff") format("woff");
+
+}
 
 * {
 
