--- a/project/template/nav.liquid
+++ b/project/template/nav.liquid
@@ -1,26 +1,29 @@
-<nav class="bg-sky-300">
-    <div class="container mx-auto max-w-screen-xl
+<nav class="absolute w-full">
+    <div class="container-lg
                 flex justify-between items-center
-                p-2">
-        <a href="index.html">
-            <img src="dependencies/assets/logo.png" class="h-16">
+                flex-col md:flex-row
+                px-2">
+        <a href="index.html" class="px-2 py-2
+                                    box-border border-b-[3px] border-b-transparent md:hover:border-b-sky-400
+                                    md:hover:text-sky-400 duration-300 ease-in-out">
+            <img src="dependencies/assets/logo-alt.png" class="h-6">
         </a>
-        <ul class="flex space-x-4 text-2xl">
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="benefits.html">Benefits</a>
-            </li>
-            <li>
-                <a href="solar.html">Solar Panels</a>
-            </li>
-            <li>
-                <a href="storage.html">Energy Storage</a>
-            </li>
-            <li>
-                <a href="contact.html">Contact</a>
-            </li>
+        <ul class="flex flex-wrap justify-center text-lg text-white">
+{% capture pages %}
+Home|index.html
+Benefits|benefits.html
+Solar Panels|solar.html
+Energy Storage|storage.html
+Contact|contact.html
+{% endcapture %}
+{% assign pages = pages | strip | split: newline %}
+            {% for page in pages %}
+                {% assign item = page | strip | split: '|' %}
+                <li class="box-border border-b-[3px] border-b-transparent md:hover:border-b-sky-400
+                           md:hover:text-sky-400 duration-300 ease-in-out">
+                    <a href="{{ item | last }}" class="flex items-center p-2">{{ item | first }}</a>
+                </li>
+            {% endfor %}
         </ul>
     </div>
 </nav>
