--- a/project/template/footer.liquid
+++ b/project/template/footer.liquid
@@ -1,5 +1,13 @@
-<div class="mt-10 border-t-2 border-sky-400">
-    <div class="container-lg">
-        placeholder
+<div class="mt-8">
+    <div class="container-lg p-4
+                flex justify-between">
+        <p class="text-gray-400 text-sm">Copyright &copy; 2023 Solar Solutions</p>
+        <p class="text-gray-400 text-sm">
+            Licensed under
+            <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
+               rel="noreferrer noopener"
+               target="_blank"
+               class="underline">CC-BY-NC-SA-4.0</a>
+        </p>
     </div>
 </div>
