--- a/project/src/dependencies/css/tailwind.css
+++ b/project/src/dependencies/css/tailwind.css
@@ -32,11 +32,19 @@
 
 }
 
-.button {
+.button, .button-primary {
 
     @apply px-4 py-2;
     @apply rounded-md text-white font-semibold;
     @apply bg-sky-400 hover:bg-sky-600 duration-300 ease-in-out;
+
+}
+
+.button-secondary {
+
+    @apply px-4 py-2;
+    @apply rounded-md text-slate-800 font-semibold;
+    @apply bg-yellow-200 hover:bg-yellow-300 duration-300 ease-in-out;
 
 }
 
