--- a/project/template/default.html
+++ b/project/template/default.html
@@ -12,10 +12,10 @@
         <link rel="stylesheet" href="dependencies/css/style.css">
     </head>
     <body class="min-h-full w-full overflow-auto">
-        {% render 'nav.liquid', file: file %}
+        {% render "nav.liquid", file: file %}
 
         {{ content }}
 
-        {% render 'footer.liquid', file: file %}
+        {% render "footer.liquid", file: file %}
     </body>
 </html>
