--- a/project/template/nav.liquid
+++ b/project/template/nav.liquid
@@ -3,9 +3,7 @@
                 flex justify-between items-center
                 flex-col md:flex-row
                 px-2">
-        <a href="index.html" class="px-2 py-2
-                                    box-border border-b-[3px] border-b-transparent md:hover:border-b-sky-400
-                                    md:hover:text-sky-400 duration-300 ease-in-out">
+        <a href="index.html" class="px-2 py-2">
             <img src="dependencies/assets/logo-alt.png" class="h-6">
         </a>
         <ul class="flex flex-wrap justify-center text-lg text-white">
