--- a/project/src/dependencies/css/style.css
+++ b/project/src/dependencies/css/style.css
@@ -10,6 +10,7 @@
 * {
 
     font-family: "Lexend Deca", "Roboto", "Segoe UI Adjusted", "Segoe UI", "Open Sans", "Helvetica", "Arial", sans-serif, "Segoe UI Emoji";
+    outline: none;
 
 }
 
