--- a/project/template/default.html
+++ b/project/template/default.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="icon" type="image/x-icon" href="dependencies/icons/clear-day.svg">
+        <link rel="icon" type="image/x-icon" href="dependencies/assets/logo-sm.png">
 
         <title>Solar Solutions</title>
 
