--- a/project/template/nav.liquid
+++ b/project/template/nav.liquid
@@ -7,16 +7,7 @@
             <img src="dependencies/assets/logo-alt.png" class="h-6">
         </a>
         <ul class="flex flex-wrap justify-center text-lg text-white">
-{% capture pages %}
-Home|index.html
-Benefits|benefits.html
-Solar Panels|solar.html
-Energy Storage|storage.html
-Contact|contact.html
-{% endcapture %}
-{% assign pages = pages | strip | split: newline %}
-            {% for page in pages %}
-                {% assign item = page | strip | split: '|' %}
+            {% for item in data.nav %}
                 <li class="box-border border-b-[3px] border-b-transparent md:hover:border-b-sky-400
                            md:hover:text-sky-400 duration-300 ease-in-out">
                     <a href="{{ item | last }}" class="flex items-center p-2">{{ item | first }}</a>
