--- a/project/template/nav.liquid
+++ b/project/template/nav.liquid
@@ -3,7 +3,7 @@
                 flex justify-between items-center
                 flex-col md:flex-row
                 px-2">
-        <a href="index.html" class="px-2 py-2">
+        <a href="index.html" class="px-2 py-4 md:py-2">
             <img src="dependencies/assets/logo-alt.png" class="h-6">
         </a>
         <ul class="flex flex-wrap justify-center text-lg text-white">
