--- a/project/template/footer.liquid
+++ b/project/template/footer.liquid
@@ -7,7 +7,7 @@
             <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
                rel="noreferrer noopener"
                target="_blank"
-               class="underline">CC-BY-NC-SA-4.0</a>
+               class="underline">CC BY-NC-SA 4.0</a>
         </p>
     </div>
 </div>
