--- a/project/src/dependencies/css/style.css
+++ b/project/src/dependencies/css/style.css
@@ -39,7 +39,7 @@ img[src$=".svg"] {
 
 .hero-benefits {
 
-    background-image: url("../images/solar-field.jpg");
+    background-image: url("../images/solar-field2.jpg");
 
 }
 
@@ -51,7 +51,7 @@ img[src$=".svg"] {
 
 .hero-storage {
 
-    background-image: url("../images/solar-field.jpg");
+    background-image: url("../images/storage-home.jpg");
 
 }
 
