--- a/project/template/footer.liquid
+++ b/project/template/footer.liquid
@@ -1,8 +1,9 @@
 <div class="mt-6">
     <div class="container-lg p-4
-                flex justify-between">
-        <p class="text-gray-400 text-sm">Copyright &copy; 2023 Solar Solutions</p>
-        <p class="text-gray-400 text-sm">
+                flex justify-center md:justify-between
+                flex-col md:flex-row">
+        <p class="text-gray-400 text-sm text-center md:text-left">Copyright &copy; 2023 Solar Solutions</p>
+        <p class="text-gray-400 text-sm text-center md:text-left">
             Licensed under
             <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
                rel="noreferrer noopener"
